- removed some compiler errors